linter error fix

--- a/src/web/stylesheets/common/pages/ide/style.scss
+++ b/src/web/stylesheets/common/pages/ide/style.scss
@@ -193,7 +193,8 @@ nav {
         background-color: $darkened-bg;
       }
 
-      span, i {
+      span,
+      i {
         pointer-events: none;
       }
     }
