--- a/src/web/stylesheets/common/pages/ide/style.scss
+++ b/src/web/stylesheets/common/pages/ide/style.scss
@@ -83,7 +83,7 @@ nav {
     align-items: center;
     gap: 0.5rem;
 
-    #selected-language-display-name {
+    #selected-language-display {
       display: inline-block;
       text-align: left;
       pointer-events: none;
@@ -115,6 +115,10 @@ nav {
     border-radius: 0.7rem;
     background: gt.theme-var(bg-1);
     overflow-y: scroll;
+
+    .dropdown-item {
+      padding: 0.75rem;
+    }
   }
 }
 
@@ -127,7 +131,7 @@ nav {
 
   .language-selector-with-back-btn {
     .dropdown-toggle {
-      #selected-language-display-name {
+      #selected-language-display {
         min-width: 300px;
       }
     }
@@ -259,8 +263,8 @@ nav {
 
   .language-selector-with-back-btn {
     .dropdown-toggle {
-      #selected-language-display-name {
-        min-width: 100px;
+      #selected-language-display {
+        min-width: 200px;
       }
     }
   }
