turtle checkpoint before challenges

--- a/src/web/stylesheets/common/pages/turtle/style.scss
+++ b/src/web/stylesheets/common/pages/turtle/style.scss
@@ -68,50 +68,58 @@
     // background: url(../../../../../images/turtle/turtleBgWeb.svg) no-repeat 100% / cover;
     overflow: auto;
 
-    .turtle-card {
+    .turtle-card-container {
       position: relative;
-      left: 45%;
-      width: 50%;
+      left: 50%;
+      width: 45%;
+      transform: translateX(-50%);
       display: inline-block;
-      border-radius: 12px;
-      background-color: gt.theme-var(game-dark-transparent, null, $thememaplight, $cssvars);
-      // backdrop-filter: blur(24px) saturate(200%);
-      // -webkit-backdrop-filter: blur(24px) saturate(200%);
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-      backdrop-filter: blur(20px);
-      -webkit-backdrop-filter: blur(20px);
-      padding: 4rem;
-      margin-top: 4rem;
-      color: gt.theme-var(text-color-2);
 
       @include gm.media-breakpoint-down(md) {
         display: none;
       }
 
-      .card-container {
-        text-align: center;
+      .turtle-card {
+        width: 100%;
+        border-radius: 12px;
+        background-color: gt.theme-var(game-dark-transparent, null, $thememaplight, $cssvars);
+        // backdrop-filter: blur(24px) saturate(200%);
+        // -webkit-backdrop-filter: blur(24px) saturate(200%);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        padding: 2rem;
+        margin-top: 2.5rem;
+        color: gt.theme-var(text-color-2);
 
-        .gameTitle {
-          font-size: 4rem;
-          margin: 0;
-        }
+        .card-container {
+          text-align: center;
 
-        .gameDesc {
-          font-size: 1.25rem;
-          line-height: 1.5;
-          margin: 1rem 0 2rem 0;
-        }
-
-        .gameBtn {
-          border-radius: 1rem;
-          background-color: gt.theme-var(text-color-2);
-
-          .gameBtnDesc {
-            font-weight: bold;
-            color: gt.theme-var(game-btn-text-color, null, $thememaplight, $cssvars);
-            margin-bottom: 0;
-            margin-left: 0.5rem;
+          .gameTitle {
+            font-size: 4rem;
+            margin: 0;
           }
+
+          .gameDesc {
+            font-size: 1.25rem;
+            line-height: 1.5;
+            margin: 1rem 0;
+          }
+        }
+      }
+
+      .gameBtn {
+        border-radius: 0.75rem;
+        background-color: gt.theme-var(text-color-2);
+        padding: 0.65rem 0;
+        margin: 0.5rem 0;
+
+        .gameBtnDesc {
+          font-weight: bold;
+          font-size: 1.5rem;
+          // color: gt.theme-var(game-btn-text-color, null, $thememaplight, $cssvars);
+          margin-bottom: 0;
+          margin-left: 0.5rem;
         }
       }
     }
@@ -180,7 +188,21 @@
       position: relative;
 
       .turtle-editor-container {
+        overflow: visible;
+
         #tabsContent {
+          #turtleBlock {
+            .injectionDiv {
+              overflow: visible;
+
+              // .blocklyToolboxDiv,
+              // .blocklyFlyout,
+              // .blocklyFlyoutScrollbar {
+              //   left: -56% !important;
+              // }
+            }
+          }
+
           #turtleOutput {
             #outputSection {
               position: relative;
@@ -320,7 +342,7 @@
 
       .turtle-blockly-container {
         background-color: gt.theme-var(bg-4);
-        padding: 0.75rem;
+        padding: 0.6rem;
 
         .turtle-blockly-title {
           color: gt.theme-var(text-color-2);
@@ -336,9 +358,10 @@
 
       .turtle-editor-title {
         background-color: gt.theme-var(bg-4);
-        padding-top: 0.5rem;
+        padding-top: 0.25rem;
         display: flex;
         justify-content: space-between;
+        border-radius: 0.75rem 0.75rem 0 0;
 
         .nav-tabs {
           .nav-item {
@@ -346,6 +369,7 @@
               color: gt.theme-var(text-color-2);
               border: unset;
               font-weight: bold;
+              padding-bottom: 0.75rem;
 
               &.active {
                 color: gt.theme-var(text-color-2);
@@ -378,8 +402,8 @@
 
     .turtle-skeleton-body {
       height: 100%;
-      animation: refresh 2.5s ease-out infinite;
-      background-image: linear-gradient(90deg, gt.theme-var(text-color-5), gt.theme-var(bg-2) 50%, gt.theme-var(skeleton-bg) 50%);
+      // animation: refresh 2.5s ease-out infinite;
+      // background-image: linear-gradient(90deg, gt.theme-var(text-color-5), gt.theme-var(bg-2) 50%, gt.theme-var(skeleton-bg) 50%);
       background-size: 200%;
     }
   }
