--- a/src/web/stylesheets/common/pages/dashboard/style.scss
+++ b/src/web/stylesheets/common/pages/dashboard/style.scss
@@ -65,13 +65,8 @@
           left: 15%;
           transform: translateX(65%);
 
-          @include gm.media-breakpoint-up(xxl) {
-            width: 8rem;
-            height: 8rem;
-          }
-
-          @include gm.media-breakpoint-up (xxxl) {
-            transform: translateX(50%);
+          @include gm.media-breakpoint-down(xxxl) {
+            transform: translate(50%);
           }
 
           @include gm.media-breakpoint-down(xxl) {
@@ -86,15 +81,38 @@
             transform: translateX(65%);
           }
 
+          @include gm.media-breakpoint-down(md) {
+            transform: translateX(75%);
+          }
+
           @include gm.media-breakpoint-down(sm) {
             left: 0;
-            // transform: translate(30%, 20%);
             transform: translateX(10%);
           }
 
           @include gm.media-breakpoint-down(xs) {
             left: 0;
             transform: translateX(15%);
+          }
+
+          @include gm.media-breakpoint-up(xxl) {
+            width: 8rem;
+            height: 8rem;
+            // transform: translate(50%);
+          }
+
+          @include gm.media-breakpoint-up (xxxl) {
+            transform: translateX(60%);
+          }
+
+          @include gm.media-breakpoint-up (xxxxl) {
+            transform: translateX(55%);
+            background-color: black;
+          }
+
+          @include gm.media-breakpoint-up(xxxxxl) {
+            transform: translateX(30%);
+            background-color: white;
           }
         }
 
@@ -107,29 +125,63 @@
           left: 15%;
           transform: translateX(65%);
 
+          // @include gm.media-breakpoint-down(xxxl) {
+          //   left: 0;
+          //   transform: translateX(50%);
+          // }
+
+          // @include gm.media-breakpoint-down(xxl) {
+          //   left: 15%;
+          //   transform: translateX(65%);
+          // }
+
+          // @include gm.media-breakpoint-down(xl) {
+          //   left: 15%;
+          //   transform: translateX(10%);
+          // }
+
+          // @include gm.media-breakpoint-down(lg) {
+          //   left: 15%;
+          //   transform: translateX(25%);
+          // }
+
+          // @include gm.media-breakpoint-down(sm) {
+          //   left: 0;
+          //   // transform: translate(30%, 20%);
+          //   transform: translateX(10%);
+          // }
+
+          // @include gm.media-breakpoint-down(xs) {
+          //   left: 0;
+          //   transform: translateX(15%);
+          // }
+
           @include gm.media-breakpoint-down(xxxl) {
-            left: 0;
             transform: translateX(50%);
           }
 
           @include gm.media-breakpoint-down(xxl) {
-            left: 15%;
-            transform: translateX(65%);
+            left: 50%;
+            transform: translateX(-50%);
           }
 
           @include gm.media-breakpoint-down(xl) {
-            left: 15%;
-            transform: translateX(10%);
+            left: 40%;
+            transform: translateX(-50%);
           }
 
           @include gm.media-breakpoint-down(lg) {
-            left: 15%;
-            transform: translateX(25%);
+            left: 40%;
+            transform: translateX(-40%);
+          }
+
+          @include gm.media-breakpoint-down(md) {
+            left: 40%;
+            transform: translateX(-35%);
           }
 
           @include gm.media-breakpoint-down(sm) {
             left: 0;
-            // transform: translate(30%, 20%);
             transform: translateX(10%);
           }
 
@@ -138,10 +190,29 @@
             transform: translateX(15%);
           }
 
+          @include gm.media-breakpoint-up(xxl) {
+            // transform: translate(50%);
+          }
+
+          @include gm.media-breakpoint-up (xxxl) {
+            left: 40%;
+            transform: translateX(-40%);
+          }
+
+          @include gm.media-breakpoint-up (xxxxl) {
+            left: 40%;
+            transform: translateX(-50%);
+          }
+
+          @include gm.media-breakpoint-up(xxxxxl) {
+            left: 30%;
+            transform: translateX(-50%);
+          }
+
           .hero-data {
             display: flex;
             align-items: center;
-            // margin-left: 0.75rem;
+            margin: 0 0.5rem;
 
             p {
               font-size: 1.125rem;
