--- a/src/web/stylesheets/common/pages/challenges/style.scss
+++ b/src/web/stylesheets/common/pages/challenges/style.scss
@@ -19,4 +19,264 @@
       }
     }
   }
+
+  .hero-card {
+    border-radius: 1rem;
+    padding: 1rem 1.5rem;
+    background-color: gt.theme-var(challenges-hero-card-bg, null, $thememaplight, $cssvars);
+  }
+
+  .new-trending-challenge-with-last-challenge {
+    display: flex;
+    padding: 1rem;
+    gap: 2rem;
+
+    .newly-trending-challenge-container {
+      width: 30%;
+
+      .title {
+        color: gt.theme-var(challenges-text-color-3, null, $thememaplight, $cssvars);
+        margin-bottom: 0.7rem;
+      }
+
+      .challenge-img {
+        img {
+          width: 100%;
+          height: 8rem;
+          border-radius: 0.75rem;
+
+          @include gm.media-breakpoint-down(md) {
+            height: 8.25rem;
+          }
+        }
+      }
+    }
+
+    .last-challenge-with-create-challenge-btn {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .challenges-activity {
+        flex: 2;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+
+        .last-challenge {
+          width: 100%;
+          padding-bottom: 1.3rem;
+          border-bottom: 2px solid gt.theme-var(challenges-nav-bg, null, $thememaplight, $cssvars);
+          margin-bottom: 1rem;
+          display: flex;
+          align-items: center;
+
+          .challenge-name {
+            margin-left: 0.5rem;
+          }
+
+          svg {
+            width: 25px;
+            height: 20px;
+            stroke: gt.theme-var(challenges-text-color-1, null, $thememaplight, $cssvars);;
+          }
+
+          .open-challenge-btn {
+            padding: 0;
+            display: inline-block;
+            margin-left: auto;
+
+            img {
+              width: 25px;
+              height: 20px;
+            }
+          }
+        }
+      }
+
+      .view-your-challenges-text-btn {
+        text-decoration: none;
+        color: gt.theme-var(challenges-text-color-3, null, $thememaplight, $cssvars);
+      }
+
+      .create-your-challenge-btn {
+        $btn-bg: map-get($thememaplight, challenges-btn-bg);
+
+        text-align: start;
+        padding: 1rem 0.75rem;
+        background-color: gt.theme-var(challenges-btn-bg, null, $thememaplight, $cssvars);
+        color: gt.theme-var(challenges-text-color-4, null, $thememaplight, $cssvars);;
+        border: none;
+        border-radius: 0.75rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        &:hover {
+          background-color: darken($btn-bg, 10);
+        }
+      }
+    }
+  }
+
+  .challenges-container {
+    margin-top: 1.5rem;
+
+    .challenges-heading-container {
+      margin-bottom: 1rem;
+    }
+
+    .challenges-block {
+      .trending-challenges-swiper {
+        .swiper-button-next,
+        .swiper-button-prev {
+          &:after {
+            font-size: 1.75rem;
+            font-weight: bolder;
+          }
+
+          &.swiper-button-disabled {
+            display: none;
+          }
+
+          top: 0;
+          height: 100%;
+          padding: 0 2rem 0;
+          color: gt.theme-var(challenges-swiper-arrow-color, null, $thememaplight, $cssvars);
+        }
+
+        .swiper-button-next {
+          right: 0;
+          background: linear-gradient(to right, transparent, gt.theme-var(challenges-body-bg, null, $thememaplight, $cssvars));
+        }
+
+        .swiper-button-prev {
+          left: 0;
+          background: linear-gradient(to left, transparent, gt.theme-var(challenges-body-bg, null, $thememaplight, $cssvars));
+        }
+
+        .swiper-slide {
+          width: 30%;
+
+          @include gm.media-breakpoint-down(lg) {
+            width: 40%;
+          }
+
+          @include gm.media-breakpoint-down(md) {
+            width: 35%;
+          }
+
+          @include gm.media-breakpoint-down(sm) {
+            width: 60%;
+          }
+
+          .challenge-item {
+            &:hover {
+              text-decoration: none;
+            }
+
+            .challenge-block {
+              .challenge-img {
+                margin-bottom: 0.5rem;
+
+                img {
+                  height: 12rem;
+                  width: 100%;
+                  border-radius: 0.75rem;
+
+                  @include gm.media-breakpoint-down(md) {
+                    height: 8.25rem;
+                  }
+                }
+              }
+
+              .challenge-title {
+                p {
+                  font-size: 1.125rem;
+                  color: gt.theme-var(text-color-1);
+                  font-weight: bold;
+                  margin-bottom: 0;
+                }
+              }
+
+              .challenge-author {
+                p {
+                  color: gt.theme-var(challenges-text-color-2, null, $thememaplight, $cssvars);
+                  margin-bottom: 0;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .newly-trending-challenge-skeleton,
+  .challenges-activity-skeleton,
+  .challenge-skeleton-card {
+    border-radius: 1rem;
+    animation: refresh 2.5s ease-out infinite;
+    background-image: linear-gradient(90deg, gt.theme-var(text-color-6), gt.theme-var(bg-3) 30px, gt.theme-var(skeleton-bg) 60px);
+    background-size: 200%;
+  }
+
+  .newly-trending-challenge-skeleton {
+    width: 30%;
+    height: 12rem;
+  };
+
+  .challenges-activity-skeleton {
+    width: 100%;
+    height: 7rem;
+  };
+
+  .challenge-skeleton-container {
+    width: 100%;
+    padding: 1.5rem 0;
+    overflow-x: auto;
+
+    .challenge-skeleton-card {
+      min-width: 20rem;
+      min-height: 12.5rem;
+      border-radius: 0.75rem;
+      margin: 0 1rem 0 0;
+
+      @include gm.media-breakpoint-down(md) {
+        min-width: 15rem;
+        min-height: 8.25rem;
+        border-radius: 0.5rem;
+      }
+    }
+  }
+
+  .skeleton {
+    width: 100%;
+  }
+
+  @keyframes refresh {
+    0% {
+      background-position: -100%;
+    }
+
+    100% {
+      background-position: 100%;
+    }
+  }
+
+  ::-webkit-scrollbar {
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: gt.theme-var(skeleton-bg);
+    border-radius: 0.5rem;
+  }
 }
