--- a/src/web/stylesheets/common/sass/components/_your-challenges-actions-modal.scss
+++ b/src/web/stylesheets/common/sass/components/_your-challenges-actions-modal.scss
@@ -12,13 +12,23 @@
     background-color: gt.theme-var(challenges-modal-header-bg, null, $thememaplight, $cssvars);
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
+    align-items: center;
   }
 
   .close-btn {
+    color: gt.theme-var(text-color-2);
     border: none;
-    background-color: transparent;
-    outline: none;
-    padding: 0;
+    font-size: 2.5rem;
+    font-weight: 900;
+    background: gt.theme-var(modal-close-btn-bg);
+    padding: 0.1rem 0.35rem 0.3rem;
+    border-radius: 0.5rem;
+    line-height: 0.75;
+    opacity: 1;
+
+    &:hover {
+      opacity: 0.75;
+    }
 
     &:focus-visible {
       outline: auto;
