--- a/src/web/stylesheets/common/pages/zombieLand/style.scss
+++ b/src/web/stylesheets/common/pages/zombieLand/style.scss
@@ -339,7 +339,7 @@
         backdrop-filter: blur(16px);
         -webkit-backdrop-filter: blur(16px);
 
-        .statemant-container {
+        .statement-container {
           .commandBlocks {
             display: flex;
             flex-direction: column;
@@ -639,7 +639,7 @@
 
             #zl-toolbox {
               .zombieLand-toolbox {
-                .statemant-container {
+                .statement-container {
                   .commandBlocks {
                     display: flex;
                     flex-wrap: wrap;
