--- a/src/web/stylesheets/common/pages/webkata/style.scss
+++ b/src/web/stylesheets/common/pages/webkata/style.scss
@@ -4,6 +4,7 @@
 @use '../../sass/components/loading';
 
 @import '_webkataTheme.js';
+@import '../../loading.css';
 
 @include gt.populate-theme($thememaplight, $thememapdark, $cssvars);
 
@@ -11,12 +12,28 @@
 .webkata-main-container {
   width: 100vw;
   height: 100vh;
-  background: url(../../../../../images/webkata/webkataBgWeb.png) no-repeat 100% / cover;
+  background: linear-gradient(0deg, #242b2c 0%, rgba(0, 0, 0, 0) 100%), url(../../../../../images/webkata/webkataHtmlBgWeb.png) no-repeat 100% / cover;
+  background-blend-mode: multiply, normal;
 
-  @include gm.media-breakpoint-down(md) {
-    background-image: url(../../../../../images/webkata/webkataBg.png);
-    background-position: left center;
+  &.webkata-html-bg {
+    background: linear-gradient(0deg, #242b2c 0%, rgba(0, 0, 0, 0) 100%), url(../../../../../images/webkata/webkataHtmlBgWeb.png) no-repeat 100% / cover;
+    background-position-x: left;
   }
+
+  &.webkata-css-bg {
+    background: linear-gradient(0deg, #242b2c 0%, rgba(0, 0, 0, 0) 100%), url(../../../../../images/webkata/webkataCssBgWeb.png) no-repeat 100% / cover;
+    background-position-x: left;
+  }
+
+  &.webkata-js-bg {
+    background: linear-gradient(0deg, #242b2c 0%, rgba(0, 0, 0, 0) 100%), url(../../../../../images/webkata/webkataJsBgWeb.png) no-repeat 100% / cover;
+    background-position-x: left;
+  }
+
+  // @include gm.media-breakpoint-down(md) {
+  //   background-image: url(../../../../../images/webkata/webkataBg.png);
+  //   background-position: left center;
+  // }
 
   nav {
     background-color: gt.theme-var(game-nav-bg, null, $thememaplight, $cssvars);
@@ -172,10 +189,6 @@
   .webkata-game-container {
     padding: 1rem;
 
-    @include gm.media-breakpoint-down(md) {
-      padding: 0;
-    }
-
     .question {
       display: flex;
       align-items: center;
@@ -193,6 +206,10 @@
         margin-right: 0.65rem;
         color: gt.theme-var(game-label-color, null, $thememaplight, $cssvars);
       }
+
+      .problem-statement {
+        line-height: 30px;
+      }
     }
 
     .mobile-question-container {
@@ -206,10 +223,6 @@
         padding: 1.5rem 1.5rem 1.65rem 1.5rem;
         background-color: white;
         border-radius: 12px;
-
-        @include gm.media-breakpoint-down(md) {
-          border-radius: 0;
-        }
 
         &.question-open {
           border-bottom-left-radius: unset;
@@ -251,16 +264,314 @@
         }
       }
     }
+
+    .editor-with-live-preview {
+      padding-top: 1rem;
+      height: calc(100vh - 77px - 90px);
+      display: flex;
+      gap: 1rem;
+
+      .tabs-container {
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
+        background-color: gt.theme-var(webkata-bg-1, null, $thememaplight, $cssvars);
+        color: gt.theme-var(webkata-text-color-2, null, $thememaplight, $cssvars);
+        display: flex;
+        align-items: center;
+
+        .nav-link {
+          padding: 0.8rem;
+          display: flex;
+          flex-direction: column;
+          position: relative;
+          border: none;
+          background: none;
+          color: inherit;
+
+          &.active {
+            color: gt.theme-var(webkata-text-color-1, null, $thememaplight, $cssvars);
+
+            .active-indicator {
+              display: inline-block;
+              width: 100%;
+              height: 2px;
+              position: absolute;
+              background-color: gt.theme-var(webkata-text-color-1, null, $thememaplight, $cssvars);
+              bottom: 0;
+              left: 0;
+            }
+          }
+        }
+      }
+
+      .editor-with-header,
+      .live-preview-with-validated-result {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        border-radius: 12px;
+
+        .tab-content {
+          width: 100%;
+          height: 100%;
+
+          .tab-pane {
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        .run-btn {
+          min-width: 77px;
+          background-color: gt.theme-var(webkata-run-btn-bg, null, $thememaplight, $cssvars);
+          border-color: gt.theme-var(webkata-run-btn-bg, null, $thememaplight, $cssvars);
+          border-radius: 0.5rem;
+          color: gt.theme-var(webkata-text-color-1, null, $thememaplight, $cssvars);
+          display: flex;
+          align-items: center;
+          gap: 0.65rem;
+        }
+      }
+
+      .editor-with-header {
+        position: relative;
+        background-color: gt.theme-var(webkata-code-editor-transparent-bg, null, $thememaplight, $cssvars);
+
+        .test-editor {
+          width: 100%;
+          height: 100%;
+          border-bottom-left-radius: 12px;
+          border-bottom-right-radius: 12px;
+          background: transparent;
+          backdrop-filter: blur(70px);
+        }
+
+        .ace-monokai {
+          .ace_gutter {
+            background-color: gt.theme-var(webkata-bg-1, null, $thememaplight, $cssvars);
+            color: gt.theme-var(webkata-text-color-1, null, $thememaplight, $cssvars);
+          }
+        }
+
+        .run-btn {
+          position: absolute;
+          right: 30px;
+          bottom: 30px;
+        }
+      }
+
+      .live-preview-with-validated-result {
+        // height: 99.5%;
+
+        .tabs-container-with-tab-content {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+
+        #live-preview,
+        .validated-result {
+          background-color: gt.theme-var(webkata-bg-2, null, $thememaplight, $cssvars);
+          border: 0;
+          width: 100%;
+          height: 100%;
+          border-bottom-left-radius: 12px;
+          border-bottom-right-radius: 12px;
+        }
+
+        .validated-result {
+          .not-validated {
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 1rem;
+          }
+
+          .validated {
+            height: 100%;
+
+            .test-cases-list {
+              height: 100%;
+              margin: 0;
+              list-style: none;
+              padding: 1rem;
+
+              .test-case {
+                margin-bottom: 1rem;
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+
+                .test-case-pass-fail-icon {
+                  width: 25px;
+                  height: 25px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .webkata-game-mob-container {
+    padding: 0;
+    overflow-x: hidden;
+
+    .mobile-question-container {
+      .mobile-question-revealer {
+        border-radius: 0;
+      }
+    }
+
+    .editor-with-live-preview {
+      padding: 0;
+      gap: 0;
+      position: relative;
+
+      .editor-with-header {
+        width: 100%;
+        border-radius: 0;
+
+        .run-btn {
+          width: 95%;
+          left: 50%;
+          bottom: 10px;
+          transform: translateX(-50%);
+
+          i {
+            display: inline-block;
+            margin-left: auto;
+          }
+        }
+
+        .tabs-container {
+          border-radius: 0;
+        }
+
+        .test-editor {
+          border-radius: 0;
+        }
+      }
+
+      .live-preview-with-validated-result {
+        position: absolute;
+        width: calc(100% - 46px);
+        right: 0;
+        transform: translateX(100%);
+        flex-direction: row;
+        transition: transform 0.5s ease;
+
+        &.open {
+          z-index: 100;
+          transform: none;
+        }
+
+        #live-preview {
+          border-radius: 0;
+        }
+
+        .collapse-live-preview-btn-container {
+          position: absolute;
+          left: -46px;
+          height: 100%;
+          display: flex;
+
+          &.open {
+            z-index: 100;
+            backdrop-filter: blur(10px);
+          }
+
+          .collapse-live-preview-btn {
+            padding: 2rem 1rem;
+            border: 2px solid gt.theme-var(webkata-bg-3, null, $thememaplight, $cssvars);
+            border-radius: 12px;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+            background-color: gt.theme-var(webkata-bg-3, null, $thememaplight, $cssvars);
+            color: gt.theme-var(webkata-text-color-1, null, $thememaplight, $cssvars);
+            align-self: center;
+          }
+        }
+
+        .tabs-container-with-tab-content {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+  }
+
+  .success-modal {
+    button.close {
+      color: gt.theme-var(text-color-2);
+      font-size: 2rem;
+      background: red;
+      padding: 0.125rem 0.6rem 0.45rem;
+      line-height: 0.75;
+      opacity: 1;
+    }
+
+    .success-modal-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .main-message,
+      .congrajulations-message {
+        text-align: center;
+      }
+
+      .main-message {
+        margin-bottom: 1rem;
+      }
+
+      .congrajulations-message {
+        margin-bottom: 1.5rem;
+      }
+
+      .play-next-btn {
+        color: gt.theme-var(webkata-text-color-1, null, $thememaplight, $cssvars);
+
+        i {
+          margin-left: 2.5rem;
+        }
+      }
+    }
+  }
+
+  #loader-partial {
+    background: transparent;
+
+    &:after {
+      transform: translateX(-48%);
+      width: 20px;
+      height: 20px;
+      border-color: gt.theme-var(webkata-text-color-1, null, $thememaplight, $cssvars);
+      border-top-color: transparent;
+      left: 30%;
+    }
   }
 }
 
 ::-webkit-scrollbar {
-    width: 0.25rem;
-    height: 0.25rem;
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
+  background-color: gt.theme-var(skeleton-bg);
+  border-radius: 0.5rem;
 }
 
 @keyframes slidedown {
@@ -287,13 +598,3 @@
     transform: translateY(-100%);
   }
 }
-// .webkata-main-container {
-//   background: url(../../../../../images/turtle/turtleMainBgWeb.svg) no-repeat 100% / cover;
-//   background-position: right center;
-//   max-width: 100vw;
-//   width: unset;
-
-//   @include gm.media-breakpoint-down(md) {
-//     background-image: url(../../../../../images/turtle/turtleMainBg.png);
-//   }
-// }
